<resources>
    <string name="app_name">WOOKER</string>

    <string name="facebook_app_id">362664277723855</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_wooker">Wooker</string>
    <string name="txt_emailad">Email Address</string>
    <string name="txt_login">Login</string>
    <string name="txt_password">Password</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_first_name">First Name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="txt_contact_number">Contact Number</string>
    <string name="txt_client_account">Client Account</string>
    <string name="txt_worker_account">Worker Account</string>
    <string name="txt_add_location">Add Location</string>
    <string name="txt_close">Close</string>
    <string name="txt_ok">OK</string>
    <string name="txt_get_current_location">Get Current Location</string>
    <string name="txt_get_marker_location">Get Marker Location</string>
    <string name="txt_fo_pw">Forgot Password?</string>
    <string name="txt_sign_in">SIGN IN</string>
    <string name="txt_or_login_with">Or Login with (Clients Only)</string>
    <string name="txt_dont_have">Dont have an account? Sign Up</string>
    <string name="txt_worker_sign_up">Worker Sign Up</string>
    <string name="txt_client_sign_up">Client Sign Up</string>
    <string name="title_activity_client_home">ClientHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="txt_sample_cno">0754215821</string>
    <string name="txt_notifications">Notifications</string>
    <string name="txt_profile_settings">Profile Settings</string>
    <string name="txt_view_all_jobs">View All Jobs</string>
    <string name="txt_home">Home</string>
    <string name="txt_add_job">Add Job</string>
    <string name="txt_select_date">Select Date</string>
    <string name="txt_select_worker">Select Worker</string>
    <string name="txt_recent_jobs">Recent Jobs</string>
    <string name="txt_test_name">Kusal Shanuka</string>
    <string name="txt_job_type_with_sup">Job Type :</string>
    <string name="txt_status_with_sup">Status :</string>
    <string name="txt_added_date">Added Date :</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_clear_all">Clear All</string>
    <string name="txt_change_photo">Change Photo</string>
    <string name="txt_change_number">Change Number</string>
    <string name="txt_change_name">Change Name</string>
    <string name="txt_change_password">Change Password</string>
    <string name="title_activity_worker_main">WorkerMain</string>
    <string name="txt_job_requests">Job Requests</string>
    <string name="txt_request_date">Request Date :</string>
    <string name="txt_finished_date">Finished Date :</string>
    <string name="txt_view_location">View Location</string>
    <string name="txt_view_more_details">View More Details</string>
    <string name="txt_client_details">Client Details</string>
    <string name="txt_client_name_with_sup">Client Name :</string>
    <string name="txt_call">Call</string>
    <string name="txt_view_client_details">View Client Details</string>
    <string name="txt_rating">Rating</string>
    <string name="txt_job_count">Finished Job Count</string>
    <string name="txt_name">Name :</string>
    <string name="txt_contact_no_with_sup">Contact No :</string>
    <string name="txt_work_categorys_with_sup">Work Categorys :</string>
    <string name="txt_category_with_sup">Category :</string>
    <string name="txt_rating_with_sup">Rating :</string>
    <string name="txt_job_count_with_sup">Job Count :</string>
    <string name="txt_work_hours_with_sup">Work Hours :</string>
    <string name="txt_complete_job">Complete Job</string>
    <string name="txt_take_job">Take Job</string>
    <string name="txt_change_location">Change Location</string>
    <string name="txt_sign_out">Sign Out</string>
    <string name="txt_sign_in_with_email">Sign in with email</string>
    <string name="txt_sign_in_with_facebook">Sign In With Facebook</string>
    <string name="txt_loading">Loading.!</string>
    <string name="txt_sign_in_with_google">Sign In With Google</string>
    <string name="txt_password_must_have_6_characters">Password must have 6 characters</string>
    <string name="txt_take_photo">Take Photo</string>
    <string name="txt_choose_photo">Choose Photo</string>
    <string name="txt_set_location">Set Location</string>
    <string name="txt_change_category_s">Change Category\'s</string>
    <string name="txt_add">Add</string>
    <string name="txt_remove">Remove</string>
    <string name="txt_upload_photo">Upload Photo</string>
    <string name="txt_view_list">View List</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_worker">Worker</string>
    <string name="txt_website">Website</string>
    <string name="txt_gender2">:Gender</string>
    <string name="txt_add_website">Add Website</string>
    <string name="txt_website_link">Website Link</string>
    <string name="txt_remember_me">Remember Me</string>
    <string name="txt_accept_job">Accept Job</string>
    <string name="txt_decline_job">Decline Job</string>
    <string name="txt_no_jobs_to_show">No Jobs To Show</string>
    <string name="txt_go_to_job">Go to job</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_reminders">Reminders</string>
    <string name="txt_time">Time-</string>
    <string name="txt_change_time">Change Time</string>
    <string name="txt_open_app">Open App</string>
    <string name="txt_dismiss">Dismiss</string>
    <string name="txt_check_your_jobs">Check Your Jobs</string>
    <string name="txt_start_job">Start Job</string>
    <string name="txt_on_going_job">On going job</string>
    <string name="txt_view_worker_details">View Worker Details</string>
    <string name="txt_worker_details">Worker Details</string>
    <string name="txt_finish_job">Finish Job</string>
    <string name="txt_job_date">Job Date</string>
    <string name="txt_reset">Reset</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_annual_job_reports">Annual Job Reports</string>
    <string name="txt_reports">Reports</string>
    <string name="txt_confirmed_date">Confirmed Date</string>
    <string name="txt_payment">Payment Rs :</string>
    <string name="txt_started_time">Started Time</string>
    <string name="txt_ended_time">Ended Time</string>
    <string name="txt_worked_hours">Worked Hours</string>
    <string name="txt_worked_hours2">Worked Hours :</string>
    <string name="txt_job_price">Job Price</string>
    <string name="txt_list_view">List View</string>
    <string name="txt_city">City</string>
    <string name="txt_ratingwithdots">Rating :</string>
    <string name="txt_bluetooth">Bluetooth</string>
    <string name="txt_enable_bluetooth">Enable Bluetooth</string>
    <string name="txt_disable_bluetooth">Disable Bluetooth</string>
    <string name="txt_enable_discoverability">Enable Discoverability</string>
    <string name="txt_disable_discoverability">Disable Discoverability</string>
    <string name="txt_on_off">ON/OFF</string>
    <string name="txt_discover">Discover</string>
    <string name="txt_device_name">Device Name</string>
    <string name="txt_address">Address</string>

</resources>
