<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_signup_email"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/txt_sign_up"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_signin_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <Button
        android:id="@+id/btn_signin_email"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/txt_sign_in"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_signup_email"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <EditText
        android:id="@+id/pt_email_sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:background="@color/editTextBG"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/txt_emailad"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_passwordIcon3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_passwordIcon3"
        app:layout_constraintTop_toTopOf="@+id/imageView_passwordIcon3" />

    <ImageView
        android:id="@+id/imageView_passwordIcon3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/pt_icon_bg"
        android:padding="8dp"
        android:src="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pt_pword_sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:background="@color/editTextBG"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_passwordIcon4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_passwordIcon4"
        app:layout_constraintTop_toTopOf="@+id/imageView_passwordIcon4" />

    <ImageView
        android:id="@+id/imageView_passwordIcon4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/pt_icon_bg"
        android:padding="8dp"
        android:src="@drawable/ic_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_passwordIcon3" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/txt_password_must_have_6_characters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_group" />

    <TextView
        android:id="@+id/tv_forgot_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="Forgot Password?"
        android:textAlignment="center"
        android:textColor="@color/transparent_bg"
        android:textSize="13dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin_email" />

    <RadioGroup
        android:id="@+id/rb_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_pword_sign_in">

        <RadioButton
            android:id="@+id/rb_rem_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/txt_remember_me"
            android:textColor="@color/transparent_bg"
            android:textSize="14sp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cb_rem_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableTint="#0099FF"
        android:text="@string/txt_remember_me"
        android:textColor="@color/transparent_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rb_group" />
</android.support.constraint.ConstraintLayout>