<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frag_User_Login">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-11dp"
                android:rotation="45"
                android:src="@drawable/square" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent_bg"
                    android:fontFamily="@font/open_sans_extra_bold"
                    android:text="@string/txt_wooker"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:src="@drawable/ic_login_main" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/open_sans_extra_bold"
                    android:text="@string/txt_sign_in"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageView_userIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/pt_icon_bg"
                    android:padding="8dp"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView_userIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imageView_userIcon"
                    android:background="@color/editTextBG"
                    android:fontFamily="@font/open_sans_semibold"
                    android:hint="@string/txt_emailad"
                    android:paddingLeft="10dp"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageView_passwordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:background="@color/pt_icon_bg"
                    android:padding="8dp"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView_passwordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imageView_passwordIcon"
                    android:background="@color/editTextBG"
                    android:fontFamily="@font/open_sans_semibold"
                    android:hint="@string/txt_password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:visibility="gone">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/txt_remember_me"
                    android:textColor="@color/textColor" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/txt_fo_pw"
                    android:textAllCaps="false"
                    android:textColor="@color/textColor"
                    android:textSize="13sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/button_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout3"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/txt_sign_in"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/button_signin"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layerType="software"
                android:src="@drawable/dash"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/txt_or_login_with"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:visibility="gone" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/btn_signin_google"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_signin_email" />

                <Button
                    android:id="@+id/btn_signin_facebook"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:drawablePadding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/txt_sign_in_with_facebook"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_signin_email"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_signin_email"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/ic_email_at"
                    android:drawablePadding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/txt_sign_in_with_email"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_signin_google" />

                <Button
                    android:id="@+id/btn_signin_google"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/ic_google"
                    android:drawablePadding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/txt_sign_in_with_google"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_signin_facebook" />

            </android.support.constraint.ConstraintLayout>


            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/txt_dont_have"
                android:visibility="gone" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>
